10/1/10 add E-field view
10/1/10 move responsibility for dielectric color into DielectricNode
# 0.00.18 (44586) Sep 30, 2010
9/30/10 demo fix to current indicator, and improved plate charge layout
9/30/10 add margin along z axis for plate charges, hack to keep them on the plate with 3D perspective
9/30/10 keep plate charges from falling off the edges of the plate
9/30/10 ensure that at least one charge is shown if number of plate charges is non-zero
9/30/10 TestPlateChargeLayout, test harness for plate charge layout
9/30/10 fix: current indicator should point counterclockwise for +dV, clockwise for -dV
9/30/10 tweak tick marks on Plate Charge slider, make thumb line up precisely with zero
9/29/10 remove debug value node from PlateChargeControlNode, this info is shown in ModelValuesPanel
9/29/10 when "Remove Wires" is pressed, set Plate Charge control to the plate charge with the battery connected
9/29/10 change range of Plate Charge slider to go from "lots (+)" to "lots (-)"
# 0.00.17 (44526) Sep 29, 2010
9/29/10 demo first pass at grid layout for plate charges
9/29/10 layout charges in a grid using algorithm from CCK's CapacitorNode (lines 270-230)
9/29/10 handle partially-inserted dielectric for Plate Charges view
9/29/10 make battery have no affect when disconnected
9/29/10 fixed another plate charge polarity issue
# 0.00.16 (44502) Sep 29, 2010
9/29/10 another dev version to demo plate charge, fixed polarity issues
9/28/10 create infrastructure for dielectric charge views, wire up to control panel
9/28/10 pull PlateChargeNode out of PlateNode, bad idea to merge them
9/28/10 merge PlateChargeNode into PlateNode
# 0.00.15 (44492) Sep 28, 2010
9/28/10 dev version to demonstrate problems with plate charge representation
9/28/10 keep charges fully inside the plate by taking the charge size into account
9/28/10 reduce size of charges to match Noah's mock up
9/28/10 fixed plate area drag handle
9/28/10 fixed plate separation drag handle