@@ -1,3 +1,4 @@
+10/1/10 make capacitor plates and dielectric transparent when E-field is selected
 10/1/10 add E-field view
 10/1/10 move responsibility for dielectric color into DielectricNode
 # 0.00.18 (44586) Sep 30, 2010
